force-app/main/default/objects/cgc_sync__Sync_History_Detail__c/cgc_sync__Sync_History_Detail__c.object-meta.xml
<CustomObject>
    <description>Contains detail information related to each specific Sync History record</description>
    <label>Sync History Detail</label>
    <nameField>
        <displayFormat>SHD-{0000000000}</displayFormat>
        <label>Sync History Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync History Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>