force-app/main/default/objects/cgc_sync__Sync_History_Detail__c/fields/cgc_sync__Api_Calls__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Api_Calls__c</fullName>
    <description>Number of API Calls made during sync step</description>
    <label>Api Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>