force-app/main/default/objects/cgc_sync__Sync_History_Detail__c/fields/cgc_sync__Duration__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Duration__c</fullName>
    <formula>( cgc_sync__End_Date_Time__c -  cgc_sync__Start_Date_Time__c ) * 24*60*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>