force-app/main/default/objects/cgc_sync__Sync_History_Detail__c/fields/cgc_sync__Processed_Records__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Processed_Records__c</fullName>
    <description>Number of processed records for sync step</description>
    <label>Processed Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>