force-app/main/default/objects/cgc_sync__Sync_History_Detail__c/fields/cgc_sync__Sync_History__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_History__c</fullName>
    <description>Reference to related Sync History</description>
    <label>Sync History</label>
    <referenceTo>cgc_sync__Sync_History__c</referenceTo>
    <relationshipLabel>Sync History Detail</relationshipLabel>
    <relationshipName>Sync_History_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>