force-app/main/default/objects/cgc_sync__Sync_History_Detail__c/fields/cgc_sync__Sync_Step__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_Step__c</fullName>
    <label>Sync Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upload</fullName>
            </value>
            <value>
                <fullName>Execute_FSOD</fullName>
            </value>
            <value>
                <fullName>Download</fullName>
            </value>
            <value>
                <fullName>Download_NFT</fullName>
            </value>
            <value>
                <fullName>Download_App_Content</fullName>
            </value>
            <value>
                <fullName>Download_Attachment</fullName>
            </value>
            <value>
                <fullName>Purging_Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>