force-app/main/default/objects/cgc_sync__Sync_History_Detail__c/fields/cgc_sync__Sync_Success__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE sync step was completed successfully
FALSE sync step was completed with errors</description>
    <label>Sync Success</label>
    <type>Checkbox</type>
</CustomField>